--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^18.0.1",
+    "@react-native-firebase/firestore": "^18.0.0",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
+    "@shopify/react-native-skia": "^0.1.194",
     "base-64": "^1.0.0",
     "expo": "~48.0.18",
     "expo-status-bar": "~1.4.4",
