--- a/package.json
+++ b/package.json
@@ -9,26 +9,26 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/webpack-config": "^18.0.1",
-    "@react-native-firebase/firestore": "^18.0.0",
+    "@expo/webpack-config": "^0.17.0",
+    "@react-native-firebase/firestore": "^17.4.2",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
-    "@shopify/react-native-skia": "^0.1.194",
+    "@shopify/react-native-skia": "0.1.141",
     "base-64": "^1.0.0",
-    "expo": "~48.0.18",
+    "expo": "^46.0.21",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.22.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.71.8",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
+    "react-native": "0.69.9",
     "react-native-animatable": "^1.3.3",
     "react-native-dropdown-select-list": "^2.0.4",
-    "react-native-gesture-handler": "~2.9.0",
+    "react-native-gesture-handler": "~2.5.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
-    "react-native-reanimated": "~2.14.4",
-    "react-native-safe-area-context": "^4.5.0",
-    "react-native-screens": "~3.20.0",
+    "react-native-reanimated": "~2.9.1",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
     "react-native-web": "~0.18.10",
     "react-navigation": "^4.4.4"
   },
