shitty ass error

--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^0.17.0",
+    "@react-native-community/datetimepicker": "^7.1.0",
     "@react-native-firebase/firestore": "^17.4.2",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
     "@shopify/react-native-skia": "0.1.141",
     "base-64": "^1.0.0",
+    "datetimepicker": "^0.1.39",
     "expo": "^46.0.21",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.22.1",
